--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -17,8 +17,16 @@
 	</head>
 	<body>
 		<div class="text-center">
+      <h1>{{ title }}</h1>
 			<h1>Hello, world!</h1>
 		</div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>{{ content }}</p>
+        </div>
+      </div>
+    </div>
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
