--- a/src/templates/contact/view.html
+++ b/src/templates/contact/view.html
@@ -27,9 +27,7 @@
           <div class="col-sm-6 col-12">
             <form method="POST">
               {% csrf_token %}
-              <input class="form-control" type="text" placeholder="Name" name="fullname">
-              <input class="form-control" type="email" placeholder="Email" name="email">
-              <textarea class="form-control" name="content" placeholder="Your content"></textarea>
+              {{ form }}
               <button type="submit" class="btn btn-default">Submit</button>
             </form>
           </div>
