--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -12,6 +13,7 @@
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 			crossorigin="anonymous"
 		/>
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 		<title>Hello, world!</title>
 	</head>
